# nova-mythos

./: .gitignore  README.md  pyproject.toml  session_log_2026-04-28.txt
configs/: nova_mythos.default.yaml
docs/: MYTHOS_LITE.md
docs/plans/: PHASE1_PLAN.txt
results/: benchmark_1b_results.json  benchmark_lite_results.json
scripts/: run_probes.py
src/nova_mythos/: __init__.py  backend.py  config.py  harness.py
src/nova_mythos/model/: __init__.py  architecture.py  variants.py
tests/: test_backend.py  test_hardware.py  test_probe_harness.py
training/: benchmark_1b.py  benchmark_lite.py  prepare_corpus.py  train_lite.py
